testfiles/k8s/demo/openbao.yaml
---
# Service for OpenBao cluster
apiVersion: v1
kind: Service
metadata:
  name: openbao-internal
  namespace: authly-test
  labels:
    helm.sh/chart: openbao-0.7.0
    app.kubernetes.io/name: openbao
    app.kubernetes.io/instance: openbao
    app.kubernetes.io/managed-by: Helm
    openbao-internal: "true"
  annotations:
spec:
  clusterIP: None
  publishNotReadyAddresses: true
  ports:
    - name: "http"
      port: 8200
      targetPort: 8200
    - name: https-internal
      port: 8201
      targetPort: 8201
  selector:
    app.kubernetes.io/name: openbao
    app.kubernetes.io/instance: openbao
    component: server
---
# Service for OpenBao cluster
apiVersion: v1
kind: Service
metadata:
  name: openbao
  namespace: authly-test
  labels:
    helm.sh/chart: openbao-0.7.0
    app.kubernetes.io/name: openbao
    app.kubernetes.io/instance: openbao
    app.kubernetes.io/managed-by: Helm
  annotations:
spec:
  # We want the servers to become available even if they're not ready
  # since this DNS is also used for join operations.
  publishNotReadyAddresses: true
  ports:
    - name: http
      port: 8200
      targetPort: 8200
    - name: https-internal
      port: 8201
      targetPort: 8201
  selector:
    app.kubernetes.io/name: openbao
    app.kubernetes.io/instance: openbao
    component: server
---
# StatefulSet to run the actual openbao server cluster.
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: openbao
  namespace: authly-test
  labels:
    app.kubernetes.io/name: openbao
    app.kubernetes.io/instance: openbao
    app.kubernetes.io/managed-by: Helm
spec:
  serviceName: openbao-internal
  podManagementPolicy: Parallel
  replicas: 1
  updateStrategy:
    type: OnDelete
  selector:
    matchLabels:
      app.kubernetes.io/name: openbao
      app.kubernetes.io/instance: openbao
      component: server
  template:
    metadata:
      labels:
        helm.sh/chart: openbao-0.7.0
        app.kubernetes.io/name: openbao
        app.kubernetes.io/instance: openbao
        component: server
      annotations:
    spec:
      terminationGracePeriodSeconds: 10
      serviceAccountName: openbao
      securityContext:
        runAsNonRoot: true
        runAsGroup: 1000
        runAsUser: 100
        fsGroup: 1000
      hostNetwork: false
      volumes:
        - name: home
          emptyDir: {}
        # Authly policy volume mapping
        - name: authly-policy
          configMap:
            name: authly-policy-map
      containers:
        - name: openbao
          image: quay.io/openbao/openbao:2.1.0
          imagePullPolicy: IfNotPresent
          command:
            - "/bin/sh"
            - "-ec"
          args:
            - |
              /usr/local/bin/docker-entrypoint.sh bao server -dev
          securityContext:
            allowPrivilegeEscalation: false
          volumeMounts:
            - name: home
              mountPath: /home/openbao
            # Mount Authly policy
            - name: authly-policy
              mountPath: /tmp/authly_policy.hcl
              subPath: authly_policy.hcl
          ports:
            - containerPort: 8200
              name: http
            - containerPort: 8201
              name: https-internal
            - containerPort: 8202
              name: http-rep
          readinessProbe:
            # Check status; unsealed openbao servers return 0
            # The exit code reflects the seal status:
            #   0 - unsealed
            #   1 - error
            #   2 - sealed
            exec:
              command: ["/bin/sh", "-ec", "bao status -tls-skip-verify"]
            failureThreshold: 2
            initialDelaySeconds: 5
            periodSeconds: 5
            successThreshold: 1
            timeoutSeconds: 3
          lifecycle:
            # openbao container doesn't receive SIGTERM from Kubernetes
            # and after the grace period ends, Kube sends SIGKILL.  This
            # causes issues with graceful shutdowns such as deregistering itself
            # from Consul (zombie services).
            preStop:
              exec:
                command: [
                    "/bin/sh",
                    "-c",
                    # Adding a sleep here to give the pod eviction a
                    # chance to propagate, so requests will not be made
                    # to this pod while it's terminating
                    "sleep 5 && kill -SIGTERM $(pidof bao)",
                  ]
            # Set up openbao for
            postStart:
              exec:
                command: [
                    "/bin/sh",
                    "-c",
                    "bao policy write authly /tmp/authly_policy.hcl && \
                    bao auth enable kubernetes && \
                    bao write auth/kubernetes/config kubernetes_host=https://$KUBERNETES_SERVICE_HOST:$KUBERNETES_SERVICE_PORT && \
                    bao write auth/kubernetes/role/authly bound_service_account_names=authly bound_service_account_namespaces=authly-test policies=authly ttl=24h",
                  ]
