testfiles/k8s/demo/testservice.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: authly-test
  name: testservice
spec:
  selector:
    app: testservice
  ports:
    - name: web
      protocol: TCP
      port: 443
      targetPort: 443
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: authly-test
  name: testservice
  labels:
    app: testservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: testservice
  template:
    metadata:
      labels:
        app: testservice
        authlyDev: restart
    spec:
      serviceAccountName: testservice
      enableServiceLinks: false
      containers:
        - name: testservice
          image: protojour/authly-testservice:dev
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          volumeMounts:
            - name: authly-certs
              mountPath: /etc/authly/certs
      volumes:
        - name: authly-certs
          configMap:
            name: authly-certs.crt
